WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270205
Safari unable to play YouTube content fast enough. Content window spins and plays only after 25-30 seconds
https://bugs.webkit.org/show_bug.cgi?id=270205
Summary
Safari unable to play YouTube content fast enough. Content window spins and p...
Jean-Yves Avenard [:jya]
Reported
2024-02-27 17:05:01 PST
Playing Youtube content in Safari after just booting up, has over 25 second delay before able to play. Black screen with spinning wheel inside the Youtube window, may be unable to play commercial. Not sure. Refreshing window doesn’t speed up the process Occurs 100% of a time. Issue doesn’t occur with Google Chrome browser Once it goes through this big delay, other videos will play just fine until user restarts and tries to play something.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-02-27 17:05:07 PST
rdar://123528095
Jean-Yves Avenard [:jya]
Comment 2
2024-02-27 17:09:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25203
EWS
Comment 3
2024-02-28 07:13:41 PST
Committed
275443@main
(dc7bb79ca72b): <
https://commits.webkit.org/275443@main
> Reviewed commits have been landed. Closing PR #25203 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug